examples/test/testpolicy13961.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13961
  namespace: namespace490
spec:
  podSelector:
    matchLabels:
      key22: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value30
          key46: value45
          key24: value43
      podSelector:
        matchLabels:
          key4: value48
          key24: value18
